--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^4.5.3",
     "firebase": "^8.1.2",
+    "formik": "^2.2.6",
     "framer-motion": "^2.9.5",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
@@ -17,7 +18,8 @@
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
