--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "firebase": "^8.1.2",
     "formik": "^2.2.6",
     "framer-motion": "^2.9.5",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
